[gd_scene load_steps=16 format=3 uid="uid://bp61akfuetlt5"]

[ext_resource type="Script" path="res://main.gd" id="1_nbeeq"]
[ext_resource type="Texture2D" uid="uid://byh1o0djl175q" path="res://tile.png" id="1_qpkmu"]
[ext_resource type="Texture2D" uid="uid://kekf11r0nbms" path="res://void.png" id="2_p1jdq"]
[ext_resource type="Script" path="res://Player.gd" id="2_veyos"]
[ext_resource type="Texture2D" uid="uid://b6xbufjpghh6w" path="res://cleric.png" id="3_5gvix"]
[ext_resource type="Texture2D" uid="uid://cgktvj01rvd0j" path="res://ward.png" id="4_2qjkf"]
[ext_resource type="Texture2D" uid="uid://bgmh3lxhpgvlj" path="res://wall.png" id="4_l1if2"]
[ext_resource type="Texture2D" uid="uid://cphfeucx3ai4u" path="res://flame.png" id="5_8ents"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1hp8"]
radius = 19.0
height = 110.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ib8rc"]
radius = 18.9737

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cncxb"]
radius = 7.0
height = 22.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_373d7"]
texture = ExtResource("1_qpkmu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t5nss"]
texture = ExtResource("2_p1jdq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0
0:0/0/physics_layer_2/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w32lx"]
texture = ExtResource("4_l1if2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_6610i"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 2
physics_layer_2/collision_layer = 4
physics_layer_2/collision_mask = 4
navigation_layer_0/layers = 1
navigation_layer_1/layers = 2
navigation_layer_2/layers = 4
sources/0 = SubResource("TileSetAtlasSource_373d7")
sources/1 = SubResource("TileSetAtlasSource_t5nss")
sources/2 = SubResource("TileSetAtlasSource_w32lx")

[node name="Main" type="Node2D" groups=["unapusable"]]
position = Vector2(-1, 0)
script = ExtResource("1_nbeeq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 0)

[node name="Player" type="Area2D" parent="." groups=["pausable"]]
light_mask = 2
visibility_layer = 2
z_index = 3
position = Vector2(-532, -41)
collision_layer = 7
collision_mask = 7
script = ExtResource("2_veyos")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("3_5gvix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_m1hp8")

[node name="RayCast2D" type="RayCast2D" parent="Player"]

[node name="RitualCircle" type="Area2D" parent="."]
z_index = 2
position = Vector2(-480, 93)
collision_layer = 14
collision_mask = 14

[node name="Sprite2D" type="Sprite2D" parent="RitualCircle"]
texture = ExtResource("4_2qjkf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RitualCircle"]
shape = SubResource("CircleShape2D_ib8rc")

[node name="Flame" type="Area2D" parent="."]
z_index = 2
position = Vector2(-32, 32)
collision_layer = 14
collision_mask = 14

[node name="Sprite2D" type="Sprite2D" parent="Flame"]
texture = ExtResource("5_8ents")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_cncxb")

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6610i")
format = 2
layer_0/name = "Walls"
layer_0/navigation_enabled = false
layer_1/name = "Platforms"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(65527, 0, 0, 65528, 0, 0, -8, 0, 0, -9, 0, 0, 131063, 0, 0, 131064, 0, 0, -65544, 0, 0, -65545, 0, 0, -262150, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -262148, 0, 0, -262149, 0, 0, 131067, 0, 0, 196603, 0, 0, 196604, 0, 0, 131068, 0, 0, -65538, 0, 0, -65537, 0, 0, -1, 0, 0, -65536, 0, 0, 0, 0, 0, 1, 0, 0, -65535, 0, 0, -131071, 0, 0, -131072, 0, 0, 65537, 0, 0, -327676, 0, 0, -262140, 0, 0, -262139, 0, 0, -327675, 0, 0, 196612, 0, 0, 262148, 0, 0, 262149, 0, 0, 196613, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 65544, 0, 0, 8, 0, 0, -65528, 0, 0, -131064, 0, 0, 4, 0, 0)
layer_2/name = "Void"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(196599, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 327671, 1, 0, 262135, 1, 0, 262137, 1, 0, 262138, 1, 0, 327674, 1, 0, 327673, 1, 0, 196601, 1, 0, 131065, 1, 0, 65529, 1, 0, -7, 1, 0, -65543, 1, 0, -131079, 1, 0, -131080, 1, 0, -131081, 1, 0, -196617, 1, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -196615, 1, 0, -196616, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -196611, 1, 0, -262147, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 65532, 1, 0, 65531, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, -6, 1, 0, -65542, 1, 0, -65541, 1, 0, -65540, 1, 0, -4, 1, 0, -5, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 327676, 1, 0, 327675, 1, 0, 327677, 1, 0, 196605, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65535, 1, 0, 65534, 1, 0, -2, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 327679, 1, 0, 262143, 1, 0, 196607, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 262151, 1, 0, 262150, 1, 0, 196614, 1, 0, 196615, 1, 0, 65542, 1, 0, 6, 1, 0, -65530, 1, 0, -131066, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -262136, 1, 0, -327672, 1, 0, -327673, 1, 0, -262137, 1, 0, -262138, 1, 0, -327674, 1, 0, -327677, 1, 0, -327678, 1, 0, -327679, 1, 0, -327680, 1, 0, -262145, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -262141, 1, 0, -262142, 1, 0, -262143, 1, 0, -262144, 1, 0, -196609, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -131069, 1, 0, -196604, 1, 0, -196603, 1, 0, -131067, 1, 0, -131068, 1, 0, -65532, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 65540, 1, 0, -327690, 2, 0, -262154, 2, 0, -196618, 2, 0, -131082, 2, 0, -65546, 2, 0, -10, 2, 0, 65526, 2, 0, 131062, 2, 0, 196598, 2, 0, 262134, 2, 0, 327670, 2, 0, 393206, 2, 0, 327689, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 262153, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 2, 0, -65527, 2, 0, -131063, 2, 0, -196599, 2, 0, -262135, 2, 0, -327671, 2, 0, -393207, 2, 0, -393208, 2, 0, -393209, 2, 0, -393210, 2, 0, -393211, 2, 0, -393212, 2, 0, -393213, 2, 0, -393214, 2, 0, -393215, 2, 0, -393216, 2, 0, -327681, 2, 0, -327682, 2, 0, -327683, 2, 0, -327684, 2, 0, -327685, 2, 0, -327686, 2, 0, -327687, 2, 0, -327688, 2, 0, -327689, 2, 0)

[connection signal="area_entered" from="RitualCircle" to="Player" method="_on_ritual_circle_area_entered" binds= [Vector2(1, 0)]]
[connection signal="area_entered" from="Flame" to="Player" method="_on_flame_area_entered" binds= [Vector2(1, 0)]]
